--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.1.3",
     "nanoid": "^4.0.0",
+    "notiflix": "^3.2.5",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
